Added Masthead and positioned text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/scrolling-nav.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
 </head>
 
@@ -43,10 +43,19 @@
     </div>
   </nav>
 
-  <header class="bg-primary text-white">
-    <div class="container text-center">
-      <h1>Welcome to Scrolling Nav</h1>
-      <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+  <!-- Full Page Image Header with Vertically Centered Content -->
+  <header class="masthead">
+    <div class="container h-100">
+      <div class="row h-100 align-items-end">
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col-4 align-self-end">
+          <h1 class="font-weight-light">WE ARE <br> <b>OUTLIER</b></h1>
+          <p class="lead">Ten years ago Outlier was made up of only a few entreprenuers. Over the next few years we developed, bought and built the companies you see here.  Now 12,000 strong and driving $1B in revenue, but still driven by a small but mighty team of operating experts, we are Outlier. And we're just getting started.</p>
+        </div>
+      </div>
     </div>
   </header>
 
