--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,13 +45,9 @@
 
   <!-- Full Page Image Header with Vertically Centered Content -->
   <header class="masthead">
-    <div class="container h-100">
+    <div class="container-fluid h-100 px-0">
       <div class="row h-100 align-items-end">
-        <div class="col">
-        </div>
-        <div class="col">
-        </div>
-        <div class="col-4 align-self-end">
+        <div class="col-lg-4 py-4 px-5 ml-auto" id="orange-box">
           <h1 class="font-weight-light">WE ARE <br> <b>OUTLIER</b></h1>
           <p class="lead">Ten years ago Outlier was made up of only a few entreprenuers. Over the next few years we developed, bought and built the companies you see here.  Now 12,000 strong and driving $1B in revenue, but still driven by a small but mighty team of operating experts, we are Outlier. And we're just getting started.</p>
         </div>
@@ -60,17 +56,13 @@
   </header>
 
   <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>About this page</h2>
-          <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-          <ul>
-            <li>Clickable nav links that smooth scroll to page sections</li>
-            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-          </ul>
+    <div class="container-fluid px-0">
+      <div class="row no-gutters">
+        <div class="col-lg-4" id="we-are">
+          <h1>WE ARE</h1> 
+        </div>
+        <div class="col-lg-8" id="about-text">
+          <p class="lead">There are two types of outliers: the obvious winners and the underdogs. We're passionate about the underdog. The one "everyone" sees as the longshot. But we see as the Outlier. Our businesses are outliers. Our people are outliers. And our "secret sauce" for building and growing breakthrough brands is challenging norms, pushing evelopes and empowering our people, which consistently lead to remarkable results.</p>
         </div>
       </div>
     </div>
@@ -80,8 +72,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Services we offer</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+          <h2>12,000</h2>
+          <p class="lead">Our people rock. They make up who we are and drive where we're going. That's why we are proud to support the over 12,000 incredible team members that choose to work under one of Outlier's compainies every day.</p>
+        </div>
+      </div>
+      <div class = "row">
+        <div class="col-12 mx-auto">
+          <p>Timeline goes right here</p>
         </div>
       </div>
     </div>
@@ -99,7 +96,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-5">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
