Timeline part of main page.  Needs so styiling work

--- a/index.html
+++ b/index.html
@@ -71,18 +71,99 @@
     </div>
   </section>
 
-  <section id="services" class="bg-light">
-    <div class="container">
+  <section id="timeline" class="bg-light">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>12,000</h2>
           <p class="lead">Our people rock. They make up who we are and drive where we're going. That's why we are proud to support the over 12,000 incredible team members that choose to work under one of Outlier's compainies every day.</p>
         </div>
       </div>
-      <div class = "row">
-        <div class="col-12 mx-auto">
-          <p>Timeline goes right here</p>
-        </div>
+      <div class = "row timeline-row">
+        <!-- <div class="col-12 mx-auto"> -->
+
+          <!-- Timeline goes right here -->
+          <!-- <section id= "timeline"> -->
+              <div class= "container-fluid" id="timeline">
+                  <div class= "row">
+                      <div class= "mason-dixon">
+          
+                          <!-- Starting Timeline Item -->
+                          <div class="item-one special-south">
+                                  <h3>THEN</h3>
+                                  <div class="arrow-left arrow-up back-white"></div>
+                                  <div class="clear-box-timeline">
+                                      <h4>ENTREPERNEURIAL VENTURES</h4>
+                                      <p>1 Location <br> 2 People</p>
+                                  </div>
+                              </div>
+                          <div class="reg-container">
+                              <!-- Regular Timeline Items -->
+                              <div class="reg-timeline item-two north">
+                                  <div class="reg-content-wrapper">
+                                      <h3>2010</h3>
+                                      <h4>ESTABLISHED HEALCARE DIVISION</h4>
+                                      <p>1 Location <br> 6 Team Members</p>
+                                      <div class="termination-ball"></div>
+                                  </div>
+                              </div>
+                              <div class="reg-timeline item-three south">
+                                  <div class="reg-content-wrapper">
+                                      <div class="termination-ball"></div>
+                                      <h3>2012</h3>
+                                      <h4>EXPANDED HEALTHCARE DIVISION</h4>
+                                      <p>150 Locations <br> 6 Team Members</p>
+                                  </div>
+                              </div>
+                              <div class="reg-timeline item-four north">
+                                  <div class="reg-content-wrapper">
+                                      <h3>2014</h3>
+                                      <h4>ESTABLISHED REAL ESTATE DIVISION</h4>
+                                      <p>650 Locations <br> ??? Team Members</p>
+                                      <div class="termination-ball"></div>
+                                  </div>
+                              </div>
+                              <div class="reg-timeline item-five south">
+                                  <div class="reg-content-wrapper">
+                                      <div class="termination-ball"></div>
+                                      <h3>2015</h3>
+                                      <h4>EXPANDED ENTERTAINMENT DIVISION</h4>
+                                      <p>800 Locations <br> 1000 Team Members</p>
+                                  </div>
+                              </div>
+                              <div class="reg-timeline item-six north">
+                                  <div class="reg-content-wrapper">
+                                      <h3>2016</h3>
+                                      <h4>ESTABLISHED OUTDOOR DIVISION</h4>
+                                      <p>650 Locations <br> ??? Team Members</p>
+                                      <div class="termination-ball"></div>
+                                  </div>
+                              </div>
+                              <div class="reg-timeline item-seven south">
+                                  <div class="reg-content-wrapper">
+                                      <div class="termination-ball"></div>
+                                      <h3>2018</h3>
+                                      <h4>HIT $1B IN REVENUE</h4>
+                                      <p>1100 Locations <br> ??? Team Members</p>
+                                  </div>
+                              </div>
+                           </div>
+          
+                          <!-- End Timeline Item -->
+                          <div class="item-eight special-south">
+                              <h3>NOW</h3>
+                              <div class="arrow-right arrow-down back-white"></div>
+                              <div class="orange-box-timeline">
+                                  <h4>165K SQ FT HQ</h4>
+                                  <p>1,100+ Locations <br> 12,000+ Team Members</p>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          <!-- </section> -->
+
+        <!-- </div> -->
       </div>
     </div>
   </section>
