timeline fully styled and responsive

--- a/index.html
+++ b/index.html
@@ -64,20 +64,28 @@
         <div class="col-lg-4" id="we-are">
           <h1>WE ARE</h1> 
         </div>
-        <div class="col-lg-8" id="about-text">
+        <div class="col-lg-8 col-sm-12" id="about-text">
           <p class="lead">There are two types of outliers: the obvious winners and the underdogs. We're passionate about the underdog. The one "everyone" sees as the longshot. But we see as the Outlier. Our businesses are outliers. Our people are outliers. And our "secret sauce" for building and growing breakthrough brands is challenging norms, pushing evelopes and empowering our people, which consistently lead to remarkable results.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="timeline" class="bg-light">
+  <section id="timeline-section">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>12,000</h2>
-          <p class="lead">Our people rock. They make up who we are and drive where we're going. That's why we are proud to support the over 12,000 incredible team members that choose to work under one of Outlier's compainies every day.</p>
+      <div class="row" id="timeline-header">
+
+        <div class="col-lg-8 mx-auto col-sm-12">
+          <h2 class="text-center">12,000</h2>
+          <p class="lead" id="people-rock">Our people rock. They make up who we are and drive where we're going. That's why we are proud to support the over 12,000 incredible team members that choose to work under one of Outlier's compainies every day.</p>
+          <p class="lead text-center" id="members-strong">TEAM MEMBERS STRONG</p>
         </div>
+
+        <!-- <div class="col-sm-12">
+          <h2 class="text-center">12,000</h2>
+          <p class="lead text-center">TEAM MEMBERS STRONG</p>
+        </div> -->
+
       </div>
       <div class = "row timeline-row">
         <!-- <div class="col-12 mx-auto"> -->
@@ -143,7 +151,7 @@
                                   <div class="reg-content-wrapper">
                                       <div class="termination-ball"></div>
                                       <h3>2018</h3>
-                                      <h4>HIT $1B IN REVENUE</h4>
+                                      <h4>HIT $1 B<span>illion</span> IN REVENUE</h4>
                                       <p>1100 Locations <br> ??? Team Members</p>
                                   </div>
                               </div>
@@ -154,7 +162,7 @@
                               <h3>NOW</h3>
                               <div class="arrow-right arrow-down back-white"></div>
                               <div class="orange-box-timeline">
-                                  <h4>165K SQ FT HQ</h4>
+                                  <h4>165K <br/> SQ FT HQ</h4>
                                   <p>1,100+ Locations <br> 12,000+ Team Members</p>
                               </div>
                           </div>
@@ -171,7 +179,7 @@
   <section id="contact">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-10 mx-auto">
           <h2>Contact us</h2>
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
         </div>
