--- a/index.html
+++ b/index.html
@@ -176,14 +176,47 @@
     </div>
   </section>
 
-  <section id="contact">
-    <div class="container">
+  <section id="divisions">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Contact us</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+          <h2 class="text-center"> <span>OUR</span> DIVISIONS</h2>
         </div>
       </div>
+
+      <div class="row justify-content-center" id="divison-row">
+
+        <div class="col-sm-12 col-lg-2" id="division-one">
+          <h3 class="text-center">REAL ESTATE</h3>
+          <img><img/>
+          <p>One of the largest and most influential real estate franchise systems in the world</p>
+        </div>
+        <div class="col-sm-12 col-lg-2" id="division-two">
+          <h3 class="text-center">ENTERTAINMENT</h3>
+          <img><img/>
+          <img><img/>
+          <p>America's #1 destination for kid's birthday parties, hosting the best birthdays on the planet</p>
+        </div>
+        <div class="col-sm-12 col-lg-2" id="division-three">
+          <h3 class="text-center">AEROSPACE</h3>
+          <img><img/>
+          <p>The global leader in Curvic coupling manufacturing and equipment for the aerospace and defense industries</p>
+        </div>
+        <div class="col-sm-12 col-lg-2" id="division-four">
+          <h3 class="text-center">HEALTH CARE</h3>
+          <img><img/>
+          <p>#1 Provider of travel medicine services across North America</p>
+          <img><img/>
+          <p>Robotic and telemedicine for pharmacist consults and perscription medicine dispensing</p>
+        </div>
+        <div class="col-sm-12 col-lg-2" id="division-five">
+          <h3 class="text-center">OUTDOOR</h3>
+          <img><img/>
+          <p>The world's top rated photography backpack.</p>
+        </div>
+
+      </div>
+
     </div>
   </section>
 
